<resources>
    <string name="app_name">Monitory</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mulai">Mulai</string>
    <string name="monitory_membantu_anda_mengontrol_hp_anak">Monitory Membantu Anda \n Mengontrol HP Anak</string>
    <string name="code">A1B2C3</string>
    <string name="agreement">Dengan menekan tombol masuk berarti Anda menyetujui <b>Ketentuan Pengguna</b> dan <b>Kebijakan Data</b> kami</string>
    <string name="sign_in">Masuk</string>
    <string name="beli_kode_keluarga_disini">Beli Kode Keluarga Disini</string>
    <string name="belum_punya_kode_keluarga">Belum punya kode keluarga?</string>
    <string name="kode_keluarga">Kode Keluarga</string>
    <string name="type_code">Ketikkan kode keluarga yang Ayah Bunda miliki disini</string>
    <string name="nickname">Nama Panggilan Kamu</string>
    <string name="age">Umur Kamu</string>
    <string name="next">Selanjutnya</string>
    <string name="example_age">Contoh: 12</string>
    <string name="example_nickname">Contoh: Budi</string>
    <string name="ok">Ok</string>
    <string name="success_message">Beres! Sekarang %s udah bisa ngecek penggunaan HP %s tiap hari buat bantu %s ngatur waktu :)</string>
    <string name="error_message">Nama dan Umur tidak boleh kosong</string>
</resources>